[tool.poetry]
name = "data_selector"
version = "1.0.0"
description = "Tool to reshape data"
authors = ["OKP4 <opensource@okp4.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
click = "^8.1.3"
geopandas = "^0.12.2"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.12.6"
mypy = "^0.982"
pytest = "^8.1.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"


[tool.semantic_release]
version_variable = [
    "data_selector/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.scripts]
data-selector = "data_selector.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"